modal visible bug

--- a/app/components/Modal/index.css
+++ b/app/components/Modal/index.css
@@ -1,5 +1,6 @@
 .full-screen-modal {
-    position: absolute;
+    position: fixed;
+    overflow-y: auto;
     top: 0;
     right: 0;
     bottom: 0;
